# sql-fuse

./: .gitignore  CMakeLists.txt  DESCRIPTION.md  DESIGN.md  README.md  sql-fuse.conf.example
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  filesystem-structure.md  getting-started.md  index.md  supported-databases.md  troubleshooting.md
include/: CacheManager.hpp  Config.hpp  ConnectionPool.hpp  ErrorHandler.hpp  FormatConverter.hpp  PathRouter.hpp  SQLFuseFS.hpp  SchemaManager.hpp  VirtualFile.hpp  VirtualFileHandleManager.hpp
include/mysql/: MySQLConnection.hpp  MySQLConnectionPool.hpp  MySQLFormatConverter.hpp  MySQLResultSet.hpp  MySQLSchemaManager.hpp  MySQLVirtualFile.hpp
include/oracle/: OracleConnection.hpp  OracleConnectionPool.hpp  OracleFormatConverter.hpp  OracleResultSet.hpp  OracleSchemaManager.hpp  OracleVirtualFile.hpp
include/postgresql/: PostgreSQLConnection.hpp  PostgreSQLConnectionPool.hpp  PostgreSQLFormatConverter.hpp  PostgreSQLResultSet.hpp  PostgreSQLSchemaManager.hpp  PostgreSQLVirtualFile.hpp
include/sqlite/: SQLiteConnection.hpp  SQLiteConnectionPool.hpp  SQLiteFormatConverter.hpp  SQLiteResultSet.hpp  SQLiteSchemaManager.hpp  SQLiteVirtualFile.hpp
src/: CacheManager.cpp  Config.cpp  ErrorHandler.cpp  FormatConverter.cpp  PathRouter.cpp  SQLFuseFS.cpp  SchemaManager.cpp  VirtualFile.cpp  VirtualFileHandleManager.cpp  main.cpp
src/mysql/: MySQLConnection.cpp  MySQLConnectionPool.cpp  MySQLFormatConverter.cpp  MySQLResultSet.cpp  MySQLSchemaManager.cpp  MySQLVirtualFile.cpp
src/oracle/: OracleConnection.cpp  OracleConnectionPool.cpp  OracleFormatConverter.cpp  OracleResultSet.cpp  OracleSchemaManager.cpp  OracleVirtualFile.cpp
src/postgresql/: PostgreSQLConnection.cpp  PostgreSQLConnectionPool.cpp  PostgreSQLFormatConverter.cpp  PostgreSQLResultSet.cpp  PostgreSQLSchemaManager.cpp  PostgreSQLVirtualFile.cpp
src/sqlite/: SQLiteConnection.cpp  SQLiteConnectionPool.cpp  SQLiteFormatConverter.cpp  SQLiteResultSet.cpp  SQLiteSchemaManager.cpp  SQLiteVirtualFile.cpp
tests/: CMakeLists.txt  test_cache_manager.cpp  test_config.cpp  test_error_handler.cpp  test_format_converter.cpp  test_path_router.cpp
tests/mysql/: setup_test_db.sh  setup_test_db.sql  teardown_test_db.sh  test_mysql.sh  verify_test_db.sql
tests/oracle/: setup_test_db.sql  test_oracle.sh
tests/postgresql/: setup_test_db.sql  test_postgresql.sh
tests/sqlite/: setup_test_db.sh  setup_test_db.sql  teardown_test_db.sh  test_sqlite.sh  verify_test_db.sql
